--- a/css/style.less
+++ b/css/style.less
@@ -37,6 +37,9 @@ div#main {
                     padding: 10 5 10 10;
                 }
             }
+            .emptyCell {
+                background-color: white;
+            }
         }
     }
 }
@@ -45,7 +48,7 @@ div#main {
     background-color: rgb(153, 204, 153);;
 }
 
-.daysHeader th{
+.daysHeader th {
     background-color: @days_bg;    
 }
 
@@ -57,7 +60,7 @@ div#main {
     }
 }
 
-.monthHeader{
+.monthHeader {
     .text-center;
     td {
         .text-center;
@@ -65,4 +68,8 @@ div#main {
         font-size: 1.5em;
         color: white;
     }
+}
+
+.preview {
+    background-color: @background;
 }
